--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/breeze": "^2.9",
+        "illuminate/support": "^11.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
