--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "illuminate/support": "^11.0",
         "laravel/framework": "^11.31",
-        "illuminate/support": "^11.0"
+        "laravel/sanctum": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
